spacing issue solved

--- a/src/output.css
+++ b/src/output.css
@@ -592,10 +592,6 @@ video {
   }
 }
 
-.fixed{
-  position: fixed;
-}
-
 .absolute{
   position: absolute;
 }
@@ -606,14 +602,6 @@ video {
 
 .\!right-2{
   right: 0.5rem !important;
-}
-
-.\!right-\[70px\]{
-  right: 70px !important;
-}
-
-.bottom-6{
-  bottom: 1.5rem;
 }
 
 .bottom-\[-5\%\]{
@@ -640,10 +628,6 @@ video {
   right: 0px;
 }
 
-.right-6{
-  right: 1.5rem;
-}
-
 .right-\[4\%\]{
   right: 4%;
 }
@@ -668,40 +652,36 @@ video {
   top: 8%;
 }
 
-.\!right-9{
-  right: 2.25rem !important;
+.\!right-\[\]{
+  right:  !important;
 }
 
-.\!right-1{
-  right: 0.25rem !important;
+.\!right-\[70\]{
+  right: 70 !important;
 }
 
-.\!right-0{
-  right: 0px !important;
+.\!right-\[70px\]{
+  right: 70px !important;
 }
 
-.\!right-\[-\]{
-  right: - !important;
+.left-\[\]{
+  left: ;
 }
 
-.\!right-\[-20\]{
-  right: -20 !important;
+.left-\[70\]{
+  left: 70;
 }
 
-.\!right-\[-20px\]{
-  right: -20px !important;
+.left-\[70\[x\]\]{
+  left: 70[x];
 }
 
-.\!right-\[20px\]{
-  right: 20px !important;
+.left-\[70\[\]\]{
+  left: 70[];
 }
 
-.\!right-\[10px\]{
-  right: 10px !important;
-}
-
-.\!right-\[5px\]{
-  right: 5px !important;
+.left-\[70px\]{
+  left: 70px;
 }
 
 .-z-10{
@@ -718,10 +698,6 @@ video {
 
 .z-30{
   z-index: 30;
-}
-
-.z-\[100\]{
-  z-index: 100;
 }
 
 .z-\[15\]{
@@ -867,10 +843,6 @@ video {
   height: 50px;
 }
 
-.h-\[55px\]{
-  height: 55px;
-}
-
 .h-\[70px\]{
   height: 70px;
 }
@@ -905,10 +877,6 @@ video {
 
 .w-\[50px\]{
   width: 50px;
-}
-
-.w-\[55px\]{
-  width: 55px;
 }
 
 .w-\[59px\]{
@@ -1009,16 +977,6 @@ video {
 
 .translate-x-full{
   --tw-translate-x: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-90{
-  --tw-scale-x: .9;
-  --tw-scale-y: .9;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1190,24 +1148,6 @@ video {
   border-color: #FFFFFF80;
 }
 
-.border-black{
-<<<<<<< HEAD
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.border-white{
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-\[black\]{
-=======
->>>>>>> 82ad3e925bf3cc49f96025e6e4d1048f2903e93e
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
 .border-white{
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
@@ -1229,11 +1169,6 @@ video {
 }
 
 .bg-\[\#fff\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#ffffff\]{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
@@ -1286,14 +1221,6 @@ video {
 
 .p-\[20px\]{
   padding: 20px;
-}
-
-.p-\[12px_24px_12px_24px\]{
-  padding: 12px 24px 12px 24px;
-}
-
-.p-\[23\.5px_55px_23\.5px_55px\]{
-  padding: 23.5px 55px 23.5px 55px;
 }
 
 .px-3{
@@ -1459,17 +1386,8 @@ video {
   font-size: 32px;
 }
 
-.text-\[38px\]{
-  font-size: 38px;
-}
-
 .text-\[40px\]{
   font-size: 40px;
-}
-
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .text-\[50px\]{
@@ -1478,6 +1396,11 @@ video {
 
 .text-\[64px\]{
   font-size: 64px;
+}
+
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-\[400\]{
@@ -1578,14 +1501,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-<<<<<<< HEAD
-.text-\[\#666666\]{
-  --tw-text-opacity: 1;
-  color: rgb(102 102 102 / var(--tw-text-opacity));
-}
-
-=======
->>>>>>> 82ad3e925bf3cc49f96025e6e4d1048f2903e93e
 .opacity-20{
   opacity: 0.2;
 }
@@ -1620,12 +1535,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-lg{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .transition{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1640,18 +1549,8 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-transform{
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .duration-300{
   transition-duration: 300ms;
-}
-
-.duration-\[0\.4s\]{
-  transition-duration: 0.4s;
 }
 
 .ease-in-out{
@@ -1764,12 +1663,6 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.hover\:scale-100:hover{
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:scale-\[0\.8\]:hover{
   --tw-scale-x: 0.8;
   --tw-scale-y: 0.8;
@@ -1795,26 +1688,16 @@ video {
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-.hover\:text-\[black\]:hover{
-=======
 .hover\:text-\[\#000000\]:hover{
->>>>>>> a4ef8032cd6770fc472d57eb9f50633857a37245
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-<<<<<<< HEAD
-=======
->>>>>>> 82ad3e925bf3cc49f96025e6e4d1048f2903e93e
-=======
 .hover\:text-\[white\]:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
->>>>>>> a4ef8032cd6770fc472d57eb9f50633857a37245
 .hover\:opacity-\[100\%\]:hover{
   opacity: 100%;
 }
@@ -1828,11 +1711,6 @@ video {
 .hover\:shadow-\[\#DF4741\]:hover{
   --tw-shadow-color: #DF4741;
   --tw-shadow: var(--tw-shadow-colored);
-}
-
-.focus\:outline-none:focus{
-  outline: 2px solid transparent;
-  outline-offset: 2px;
 }
 
 @media not all and (min-width: 1024px){
@@ -1924,22 +1802,6 @@ video {
     top: 85px;
   }
 
-  .max-md\:left-\[5px\]{
-    left: 5px;
-  }
-
-  .max-md\:left-\[195px\]{
-    left: 195px;
-  }
-
-  .max-md\:left-\[115px\]{
-    left: 115px;
-  }
-
-  .max-md\:left-\[1145px\]{
-    left: 1145px;
-  }
-
   .max-md\:mx-auto{
     margin-left: auto;
     margin-right: auto;
@@ -1960,10 +1822,6 @@ video {
 
   .max-md\:ps-\[80px\]{
     padding-inline-start: 80px;
-  }
-
-  .max-md\:ps-\[20px\]{
-    padding-inline-start: 20px;
   }
 }
 
@@ -2095,10 +1953,6 @@ video {
     font-size: 35px;
   }
 
-  .sm\:text-\[50px\]{
-    font-size: 50px;
-  }
-
   .sm\:leading-\[44px\]{
     line-height: 44px;
   }
@@ -2117,30 +1971,6 @@ video {
 @media (min-width: 768px){
   .md\:top-\[8\%\]{
     top: 8%;
-  }
-
-  .md\:left-\[145px\]{
-    left: 145px;
-  }
-
-  .md\:left-\[100px\]{
-    left: 100px;
-  }
-
-  .md\:left-\[160px\]{
-    left: 160px;
-  }
-
-  .md\:left-\[px\]{
-    left: px;
-  }
-
-  .md\:left-\[200px\]{
-    left: 200px;
-  }
-
-  .md\:left-\[220px\]{
-    left: 220px;
   }
 
   .md\:order-1{
@@ -2213,14 +2043,6 @@ video {
 
   .md\:pt-\[80px\]{
     padding-top: 80px;
-  }
-
-  .md\:pe-\[13px\]{
-    padding-inline-end: 13px;
-  }
-
-  .md\:pe-\[113px\]{
-    padding-inline-end: 113px;
   }
 
   .md\:text-\[16px\]{
@@ -2336,10 +2158,6 @@ video {
 
   .lg\:gap-3{
     gap: 0.75rem;
-  }
-
-  .lg\:gap-5{
-    gap: 1.25rem;
   }
 
   .lg\:p-\[29px\]{
